FitLifeProLatest/force-app/main/default/objects/Instructor_Schedule__c/Instructor_Schedule__c.object-meta.xml
<CustomObject>
    <label>Instructor Schedule</label>
    <nameField>
        <label>Instructor Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructor Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>