FitLifeProLatest/force-app/main/default/objects/Instructor_Schedule__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Gym_Location__c</referenceTo>
    <relationshipLabel>Instructor Schedules</relationshipLabel>
    <relationshipName>Instructor_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>