FitLifeProLatest/force-app/main/default/objects/Instructor_Schedule__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Instructor Schedules</relationshipLabel>
    <relationshipName>Instructor_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>