FitLifeProLatest/force-app/main/default/objects/Instructor_Schedule__c/fields/Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Week_Day__c</fullName>
    <label>Week Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>